2003-04-08  Alex Duggan  <aldug@astrolinux.com>

	* configure.in: print out a summary displaying what
	parts of librsvg are to be built.

2003-04-08  Alex Duggan  <aldug@astrolinux.com>

	* doc/.cvsignore:
	* gimp-plugin/.cvsignore: create .cvsignore files for these
	two directories.
	
== librsvg 2.3.0 ==

2003-04-07  Dom Lachowicz <cinamod@hotmail.com>

	* gtk-engine/Makefile.am: let load when building with croco
	* gdk-pixbuf-loader/Makefile.am: ditto
	
2003-04-03  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Fixes so that we link and build a DLL on Cygwin. 
	Adapted from work by Masahiro Sakai <s01397ms at sfc.keio.ac.jp>
	(http://web.sfc.keio.ac.jp/~s01397ms/cygwin/librsvg-2.2.3-1.patch)
	* Makefile.am: Ditto
	* gtk-engine/Makefile.am: Ditto
	* gimp-plugin/Makefile.am: Ditto
	
2003-04-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: use correct name for libcroco in .pc file

2003-03-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Support text directions (bidi)
	* rsvg-text.c: Ditto
	
2003-03-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Support style information inside of defs paths
	
2003-03-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Support for <style> outside of a <defs> block
	
2003-03-24  Dom Lachowicz <cinamod@hotmail.com>

	* gimp-plugin/svg.c: Image size/resolution dialog, allow for 
	non-interactive use, ...
	
2003-03-21  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.h: Document rsvg_size_func
	* rsvg-styles.c: Whine/complain on invalid CSS documents, but chug
	along anyway
	
2003-03-19  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Re-enable libcroco support, make it the default
	* rsvg-styles.c (ccss_end_selector): Make libcroco support work
	
2003-03-19  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Disable libcroco support until libcroco implements
	the 1 remaining fn that I need from it
	* rsvg-styles.c (rsvg_parse_style_attrs): Handle tag#id, tag.klazz#id, 