@@ -1,3 +1,8 @@
+2003-04-08  Dom Lachowicz <cinamod@hotmail.com>
+
+	* configure.in: enable librsvg to be built w/o gtk+
+	* Makefile.am: ditto
+	
 2003-04-08  Alex Duggan  <aldug@astrolinux.com>
 
 	* configure.in: print out a summary displaying what
